--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -75,15 +75,16 @@ button:focus {
 /* --------- */
 /* Navbar Section  */
 /* --------- */
-.sticky {
+/* .sticky {
   background-color: #1b1a2ea9 !important;
   transition: all 0.3s ease-out 0s !important;
   box-shadow: 0px 10px 10px 0px rgba(9, 5, 29, 0.171) !important;
   backdrop-filter: blur(15px) !important;
-}
+} */
 
 .navbar {
   position: fixed !important;
+  background-color: #164058;
   transition: all 0.3s ease-out 0s !important;
   padding: 0.3rem 2rem !important;
   font-size: 1.2rem !important;
@@ -161,8 +162,8 @@ button:focus {
 
 .navbar-nav .nav-link {
   color: white !important;
-  padding-right: 1rem !important;
-  padding-left: 1rem !important;
+  padding-right: 2rem !important;
+  padding-left: 2rem !important;
 }
 
 .nav-link {
@@ -190,19 +191,13 @@ button:focus {
 .navbar-nav .nav-item a::after {
   content: "";
   position: relative;
-  display: block;
   height: 5px;
-  width: 0;
+  width: 14px;
   border-radius: 16px;
-  background: #c95bf5;
-  bottom: 1px;
-  left: 0;
+   bottom: -1px;
+  left: 5px;
   z-index: -1;
   transition: all 0.3s ease-out 0s;
-}
-
-.navbar-nav .nav-item a:hover::after {
-  width: 100%;
 }
 
 /* --------- */
@@ -257,27 +252,30 @@ button:focus {
 .home-section {
   position: relative;
   z-index: -1;
-  background-image: var(--image-gradient), url(./Assets/home-bg.jpg);
-  background-position: top center;
+  background-color: white;
+  background-image: url(../src/Assets/Projects/bg-home1.png);
+  background-position: center;
   background-repeat: no-repeat;
+  background-size: cover; /* Menjadikan gambar fit ke kanan dan kiri */
+  width: 100%; /* Memastikan lebar elemen full */
   padding-bottom: 30px !important;
   padding-top: 30px !important;
 }
 
 .home-content {
-  padding: 9rem 0 2rem !important;
+  padding: 9rem 0 5rem !important;
   color: whitesmoke;
   text-align: left;
 }
 
 .heading {
-  font-size: 2.4em !important;
-  padding-left: 50px !important;
+  font-size: 4.5em !important;
+  padding-left: 10px !important;
 }
 
 .heading-name {
   font-size: 2.5em !important;
-  padding-left: 45px !important;
+  padding-left: 10px !important;
 }
 
 .main-name {
