--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -422,7 +422,7 @@ button:focus {
 /* Footer */
 /* --------- */
 .footer {
-  background-color: rgb(10, 4, 22);
+  background-color: #164058;
   bottom: 0 !important;
   padding-top: 20px !important;
   padding-bottom: 10px !important ;
